--- a/pages/content/amp-dev/events/amp-roadshow.html
+++ b/pages/content/amp-dev/events/amp-roadshow.html
@@ -132,6 +132,15 @@ section_links:
 
     {% if doc.roadshow.nextstop %}
     <span class="ap-o-cities-sub-headline">{{ _('Where we’re going next') }}</span>
+    <div class="ap-m-tip ap-m-tip-important">
+      <div class="ap-m-tip-content">
+        {% do doc.icons.useIcon('icons/warning.svg') %}
+        <div class="ap-a-ico ap-m-tip-icon">
+          <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#warning"></use></svg>
+        </div>
+        <p>{{ _('Due to concerns around the coronavirus (COVID-19), and in accordance with health guidance from the <a href="https://www.cdc.gov/coronavirus/2019-ncov/index.html" target="_blank" rel="noopener noreferrer">CDC</a>, <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019" target="_blank" rel="noopener noreferrer">WHO</a>, and other health authorities, we have decided to postpone AMP raodshow events until further notice.') }} </p>
+      </div>
+    </div>
     {% endif %}
 
     <div class="ap-o-cities-next-events">
